# flights-api

./: .gitignore  README.md  docker-compose.yml  flights-api.postman_collection.json
flight-events-api/: Dockerfile  data.json  pyproject.toml
flight-events-api/app/: main.py
journeys-api/: Dockerfile  README.md  pyproject.toml
journeys-api/app/: config.py  exceptions.py  logger.py  main.py
journeys-api/app/api/routes/: health.py  journeys.py
journeys-api/app/models/: flight_event.py  journey.py
journeys-api/app/services/: flight_events.py  journey_search.py
journeys-api/tests/e2e/: test_e2e.py
journeys-api/tests/integration/: conftest.py  test_journeys_endpoint.py
journeys-api/tests/unit/: test_journey_search.py
