[tool.poetry]
name = "journeys-api"
version = "1.0.0"
description = "Flight journey search API"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = { version = "^0.32.1", extras = ["standard"] }
httpx = "^0.27.2"
redis = "^5.2.0"
pydantic = "^2.10.3"
pydantic-settings = "^2.6.1"
python-json-logger = "^4.1.0"
tenacity = "^9.1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
fakeredis = "^2.26.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["e2e: end-to-end tests that require the full Docker Compose stack"]
addopts = "-m 'not e2e'"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
